<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/login_form"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:srcCompat="@drawable/ic_logo_blue" />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        android:orientation="vertical">


        <EditText
            android:id="@+id/username"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLength="30"
            android:selectAllOnFocus="true"
            style="@style/input_light_blue"/>

        <EditText
            android:id="@+id/password"
            android:hint="@string/prompt_password"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="30"
            style="@style/input_light_blue"/>

        <TextView
            android:id="@+id/forgot_password_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:clickable="true"
            android:paddingRight="20dp"
            android:visibility="gone"
            android:textColor="@color/my_blue_1"
            android:text="Forgot password"/>

        <Button
            android:id="@+id/login"
            android:text="@string/action_login"
            style="@style/button_blue"/>

        <TextView
            android:id="@+id/register_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textColor="@color/my_blue_1"
            android:text="Don't have an account? register now"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/organization"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:contentDescription="@string/organization_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/ic_ensias_blue" />


</androidx.constraintlayout.widget.ConstraintLayout>