<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".ui.RegisterActivity">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/form_section"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:srcCompat="@drawable/ic_logo_blue" />
    <LinearLayout
        android:id="@+id/form_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <EditText
            android:id="@+id/firstName"
            style="@style/input_light_blue"
            android:hint="Fisrt Name"
            android:inputType="textPersonName"
            android:maxLength="30"/>

        <EditText
            android:id="@+id/lastName"
            style="@style/input_light_blue"
            android:hint="Last Name"
            android:inputType="textPersonName"
            android:maxLength="30"/>

        <EditText
            android:id="@+id/email"
            style="@style/input_light_blue"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLength="30" />

        <EditText
            android:id="@+id/password"
            style="@style/input_light_blue"
            android:hint="@string/prompt_password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="30"/>

        <EditText
            android:id="@+id/confirmPassword"
            style="@style/input_light_blue"
            android:hint="Confirm Password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="30"/>
        <Button
            android:id="@+id/login"
            style="@style/button_blue"

            android:text="@string/action_register"/>
        <TextView
            android:id="@+id/register_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:textColor="@color/my_blue_1"
            android:text="Already have an account? login now"/>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_gravity="center"
        android:visibility="gone"
        app:layout_constraintVertical_bias="0.4" />

    <ImageView
        android:id="@+id/organization"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:contentDescription="@string/organization_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/ic_ensias_blue" />
</androidx.constraintlayout.widget.ConstraintLayout>